# Todo_app_poetry

./: README.md  package-lock.json  package.json  tsconfig.json
backend/: pyproject.toml
backend/tests/: test_main.py
backend/todoapp/: main.py  settings.py
src/app/: layout.tsx  page.tsx
src/app/components/: AddTodo.tsx  Modal.tsx  TodoList.tsx
